HL0004 - get and update user data (#8)
Co-authored-by: Przemek <przemyslaw.nosek1@gmail.com>